--- a/dis6502-2.2/dis6502.ini
+++ b/dis6502-2.2/dis6502.ini
@@ -1,14 +1,14 @@
 [RecentFiles]
-File1=C:\Users\dogdark\Documents\atari\proyectos\respaldo\Turbo_Software_mas_codigos.atr
+File1=C:\Users\dogdark\Documents\atari\trabajando\Turbo_Software_mas_codigos.atr
 FileType1=102
-File2=C:\Users\dogdark\Documents\atari\xex\Sinistar (2010)(Atari)(US)[f AI for the bad guys AGG].xex
-FileType2=9
-File3=C:\Users\dogdark\Documents\atari\popeye\rc_vbxe.sys
-FileType3=13
-File4=C:\Users\dogdark\Desktop\atari\Last_Squadron\bin\AUTORUN
-FileType4=9
-File5=C:\Users\dogdark\Desktop\atari\Last_Squadron\bin\LEVEL0.BGC
-FileType5=13
+File2=C:\Users\dogdark\Documents\atari\proyectos\respaldo\Turbo_Software_mas_codigos.atr
+FileType2=102
+File3=C:\Users\dogdark\Documents\atari\xex\Sinistar (2010)(Atari)(US)[f AI for the bad guys AGG].xex
+FileType3=9
+File4=C:\Users\dogdark\Documents\atari\popeye\rc_vbxe.sys
+FileType4=13
+File5=C:\Users\dogdark\Desktop\atari\Last_Squadron\bin\AUTORUN
+FileType5=9
 [DefaultConfig]
 RawPath=C:\Users\dogdark\Desktop\atari\dis6502-2.2
 BinPath=C:\Users\dogdark\Desktop\atari\dis6502-2.2
@@ -23,6 +23,7 @@ NbBytesPerLine=8
 NbCharPerString=20
 DisplayOpCodes=0
 [RecentWorkspaces]
-Workspace1=C:\Users\dogdark\Documents\atari\proyectos\turbo600\turbostandart.wrk
-Workspace2=C:\jac\wudsn\Workspace\Atari800\turbo\turbostandart.wrk
-Workspace3=C:\Users\dogdark\Documents\atari\proyectos\respaldo\disturbo\turbostandart.wrk
+Workspace1=C:\Users\dogdark\Documents\atari\trabajando\turbodis6502.wrk
+Workspace2=C:\Users\dogdark\Documents\atari\proyectos\turbo600\turbostandart.wrk
+Workspace3=C:\jac\wudsn\Workspace\Atari800\turbo\turbostandart.wrk
+Workspace4=C:\Users\dogdark\Documents\atari\proyectos\respaldo\disturbo\turbostandart.wrk
